<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">



        <TextView
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prodId"></TextView>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prodName"></TextView>

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prodDesc"></TextView>

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prodPrice"></TextView>

</LinearLayout>